@@ -11,7 +11,6 @@ lib/MetaTrans.pm
 lib/MetaTrans/Base.pm
 lib/MetaTrans/Languages.pm
 lib/MetaTrans/SlovnikZcuCz.pm
-lib/MetaTrans/SmsCz.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
@@ -28,10 +27,6 @@ t/MetaTrans-SlovnikZcuCz/00-use.t
 t/MetaTrans-SlovnikZcuCz/01-version.t
 t/MetaTrans-SlovnikZcuCz/02-pod_coverage.t
 t/MetaTrans-SlovnikZcuCz/03-pod.t
-t/MetaTrans-SmsCz/00-use.t
-t/MetaTrans-SmsCz/01-version.t
-t/MetaTrans-SmsCz/02-pod_coverage.t
-t/MetaTrans-SmsCz/03-pod.t
 t/MetaTrans/00-use.t
 t/MetaTrans/01-version.t
 t/MetaTrans/02-pod_coverage.t
