@@ -6,6 +6,7 @@ v1.06 (????/??/??) Michal Špaček
 - Move metatrans to App::MetaTrans module.
 - Move MetaTrans::SeznamCz to standalone Perl module distribution.
 - Move MetaTrans::SlovnikCz to standalone Perl module distribution.
+- Move MetaTrans::SmsCz to standalone Perl module distribution.
 - Move MetaTrans::UltralinguaNet to standalone Perl module distribution.
 - Move MetaTrans::WordbookCz to standalone Perl module distribution.
 - Rewrote cvs revision numbers to static numbers 
